# incremnet

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Containerfile  Dockerfile  README.md  compose.yml  generate_stuff.exs  justfile  mix.exs  tools.exs
.zed/: settings.json
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: database.ts  handlers.ts  logger.ts  main.ts  server.ts  templates.ts
backend/templates/: badge.html
config/: config.exs  runtime.exs
dump/: Cargo.toml
dump/src/: main.rs
frontend/: admin.html  index.css  index.html  package-lock.json  package.json  vite.config.ts
incremnet/: Cargo.toml
incremnet/src/: db.rs  main.rs
incremnet/templates/: badge.handlebars
lib/incremnet/: application.ex  assets.ex  database.ex  server.ex  templates.ex  web.ex
lib/incremnet/plugs/: cors.ex  log_conn.ex  rate_limit.ex  require_bearer.ex
lib/incremnet/web/: admin.ex  badge.ex  router.ex
redb_wrapper/: Cargo.toml
redb_wrapper/src/: lib.rs
src/: db.rs  error.rs  main.rs
static/: index.html
templates/: badge.handlebars  badge.html
tools/: Cargo.toml
tools/src/: args.rs  dump.rs  main.rs  set.rs
www/: index.css  index.html  index.js
www/admin/: index.html
www/assets/: bg.psd
www/home/: index.html
