[package]
name = "incremnet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
handlebars = "6.3.2"
minify-html = "0.16.4"
redb = { workspace = true }
redb_wrapper = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
